--- a/GraphicEditor/View/AdditionalInformationPatientRoom.xaml
+++ b/GraphicEditor/View/AdditionalInformationPatientRoom.xaml
@@ -7,21 +7,23 @@
         mc:Ignorable="d"
         Title="AdditionalInformationPatientRoom" Height="350" Width="400" ResizeMode="NoResize"  WindowStartupLocation="CenterScreen" BorderBrush="Black">
     <Grid>
-        <Label Content="Dodatne informacije" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="25" FontWeight="SemiBold" Height="38" Foreground="#2B78E4" Margin="87,10,63,0" Width="244" />
-        <Label Content="Zgrada" HorizontalAlignment="Left" Margin="93,68,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="SemiBold" Height="32"/>
-        <Label Content="Sprat" HorizontalAlignment="Left" Margin="100,96,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="SemiBold" Height="32"/>
-        <Label Content="Odelenje" HorizontalAlignment="Left" Margin="87,128,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="SemiBold" Height="32"/>
-
-        <Label Content="Oznaka sobe" HorizontalAlignment="Left" Margin="73,160,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="SemiBold" Height="32"/>
-        <Label Content="Broj zauzetih kreveta" HorizontalAlignment="Left" Margin="43,190,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="SemiBold" Height="32"/>
-        <Label Content="Broj slobodnih kreveta" HorizontalAlignment="Left" Margin="37,222,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="SemiBold" Height="32"/>
-        <TextBox HorizontalAlignment="Left" Height="24" Margin="234,74,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBox HorizontalAlignment="Left" Height="24" Margin="234,104,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBox HorizontalAlignment="Left" Height="22" Margin="234,134,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBox HorizontalAlignment="Left" Height="22" Margin="234,166,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBox HorizontalAlignment="Left" Height="24" Margin="234,196,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <TextBox HorizontalAlignment="Left" Height="24" Margin="234,228,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="Ok" Content="Ok" HorizontalAlignment="Left" Height="30" Margin="138,274,0,0" VerticalAlignment="Top" Width="130" Foreground="AntiqueWhite" Background="#2B78E4" FontSize="20" Click="Ok_Click" />
+        <StackPanel Orientation="Horizontal" Height="40" VerticalAlignment="Top" Background="#006481">
+            <Image Width="60" Margin="5,0,0,0" Source="GraphicEditor/WhiteLogo.png"/>
+            <Label Content="Additiondal information" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Georgia" FontWeight="UltraBold" FontSize="25" Foreground="White" Width="327" Height="40"/>
+        </StackPanel>
+        <Label Content="Floor" HorizontalAlignment="Left" Margin="98,61,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="SemiBold" Height="32"/>
+        <Label Content="Ward" HorizontalAlignment="Left" Margin="96,93,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="SemiBold" Height="32"/>
+        <Label Content="Room label" HorizontalAlignment="Left" Margin="75,121,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="SemiBold" Height="32"/>
+        <Label Content="Bed capacity" HorizontalAlignment="Left" Margin="70,153,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="SemiBold" Height="32"/>
+        <Label Content="Occupied beds" HorizontalAlignment="Left" Margin="62,183,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="SemiBold" Height="32"/>
+        <Label Content="Available beds" HorizontalAlignment="Left" Margin="64,215,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="SemiBold" Height="32"/>
+        <TextBox HorizontalAlignment="Left" Height="24" Margin="210,68,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="150"/>
+        <TextBox HorizontalAlignment="Left" Height="24" Margin="210,96,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="150"/>
+        <TextBox HorizontalAlignment="Left" Height="22" Margin="210,128,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="150"/>
+        <TextBox HorizontalAlignment="Left" Height="22" Margin="210,159,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="150"/>
+        <TextBox HorizontalAlignment="Left" Height="24" Margin="210,189,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="150"/>
+        <TextBox HorizontalAlignment="Left" Height="24" Margin="210,221,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="150"/>
+        <Button x:Name="Ok" Content="Ok" HorizontalAlignment="Left" Height="30" Margin="138,274,0,0" VerticalAlignment="Top" Width="130" Foreground="White" Background="#2B78E4" FontSize="20" Click="Ok_Click" />
 
     </Grid>
 </Window>
