--- a/GraphicEditor/View/PopupExaminationRoom.xaml
+++ b/GraphicEditor/View/PopupExaminationRoom.xaml
@@ -38,15 +38,15 @@
                    Panel.ZIndex="1"
                    HorizontalAlignment="Center"
                    VerticalAlignment="Center" Height="65" Width="175">
-            <Run BaselineAlignment="Bottom" Text="Oznaka ordinacije:" Foreground="White" FontWeight="DemiBold"/>
+            <Run BaselineAlignment="Bottom" Text="Exam room label:" Foreground="White" FontWeight="DemiBold"/>
             <InlineUIContainer BaselineAlignment="Bottom">
-                <TextBox Height="18" TextWrapping="Wrap" Text="GL-O2" Width="54" TextAlignment="Left" FontSize="11" FontWeight="DemiBold"/>
+                <TextBox Height="18" TextWrapping="Wrap" Text="GL-O2" Width="61" TextAlignment="Center" FontSize="11" FontWeight="DemiBold"/>
             </InlineUIContainer>
-            <Run BaselineAlignment="Bottom" Text="&#x0a;Doktor:" Foreground="White" FontWeight="SemiBold"/>
+            <Run BaselineAlignment="Bottom" Text="&#x0a;Doctor:" Foreground="White" FontWeight="SemiBold"/>
             <InlineUIContainer BaselineAlignment="Center">
                 <TextBox Height="21" TextWrapping="Wrap" Text="Imenko Prezimenić" Width="125" TextAlignment="Center" FontSize="13" FontWeight="SemiBold" BorderBrush="#3A6180"/>
             </InlineUIContainer>
-            <Run BaselineAlignment="Bottom" Text="&#x0a;Specijalizacija:" Foreground="White" FontWeight="Medium"/>
+            <Run BaselineAlignment="Bottom" Text="&#x0a;Specialization:" Foreground="White" FontWeight="Medium"/>
             <InlineUIContainer BaselineAlignment="Center">
                 <TextBox Height="21" TextWrapping="Wrap" Text="Ginekolog" Width="83" TextAlignment="Left" FontSize="11" FontWeight="Medium" BorderBrush="#3A6180"/>
             </InlineUIContainer>
