--- a/GraphicEditor/MainWindow.xaml
+++ b/GraphicEditor/MainWindow.xaml
@@ -17,7 +17,7 @@
     </Window.Triggers>
     <DockPanel>
         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Height="68" VerticalAlignment="Top" Background="#006481" Grid.ColumnSpan="2">
-            <Image Width="60" Margin="5,0,0,0" Source="Logo.png"/>
+            <Image Width="60" Margin="5,0,0,0" Source="WhiteLogo.png"/>
             <Label Content="Hospital map" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Georgia" FontWeight="UltraBold" FontSize="50" Foreground="White"/>
         </StackPanel>
         <DockPanel DockPanel.Dock="Left" Background="SteelBlue">
