--- a/GraphicEditor/View/Building2/Building2FirstFloorPlan.xaml
+++ b/GraphicEditor/View/Building2/Building2FirstFloorPlan.xaml
@@ -15,13 +15,12 @@
             <Image Source="arrowDown.png" Width="60" Canvas.Left="348" Canvas.Top="495" MouseLeftButtonDown="mouseClickArrowDown"/>
             <Rectangle Fill="White" Stroke="Black" StrokeThickness="3" Height="260" Width="595" Canvas.Left="86"  Canvas.Top="196"/>
             <Rectangle Fill="White" Height="100" Width="50" Stroke="Black" StrokeThickness="3" Canvas.Top="196" Canvas.Left="532"  MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom"/>
-            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="136" Stroke="Black" StrokeThickness="3" Canvas.Top="196"  MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom"/>
-            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="286" Stroke="Black" StrokeThickness="3" Canvas.Top="196"  MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom"/>
-            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="380" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom" />
-            <Rectangle Fill="White" Height="100" Width="100" Canvas.Left="186" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="OperatingRoom_MouseEnter" MouseLeave="OperatingRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationOperatingRoom" />
-            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="631" Stroke="Black" StrokeThickness="3" Canvas.Top="196" MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom" />
+            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="186" Stroke="Black" StrokeThickness="3" Canvas.Top="196"  MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom"/>
+            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="230" Stroke="Black" StrokeThickness="3" Canvas.Top="196"  MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom" RenderTransformOrigin="0.58,0.54"/>
+            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="334" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="ExaminationRoom_MouseEnter" MouseLeave="ExaminationRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationExaminationRoom" />
+            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="532" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom" />
             <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="483" Stroke="Black" StrokeThickness="3" Canvas.Top="196" MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom" />
-            <Rectangle Fill="White" Height="100" Width="100" Canvas.Left="86" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="OperatingRoom_MouseEnter" MouseLeave="OperatingRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationOperatingRoom" />
+            <Rectangle Fill="White" Height="100" Width="100" Canvas.Left="581" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="OperatingRoom_MouseEnter" MouseLeave="OperatingRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationOperatingRoom" />
             <Line X1="10" Y1="10" X2="10" Y2="30" Stroke="Black" 
                   StrokeThickness="5" StrokeDashCap="Round" StrokeEndLineCap="Round" StrokeStartLineCap="Round" Canvas.Left="392" Canvas.Top="256"/>
             <Line X1="10" Y1="35" X2="5" Y2="30" Stroke="Black" 
@@ -55,20 +54,22 @@
             <Line X1="100" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Left="381" Canvas.Top="235"/>
             <Line X1="100" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Left="381" Canvas.Top="225"/>
             <Line X1="100" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Left="381" Canvas.Top="215"/>
-            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="528" Stroke="Black" StrokeThickness="3" Canvas.Top="406" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave"/>
-            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="527" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave"/>
-            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="331" Stroke="Black" StrokeThickness="3" Canvas.Top="406" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave"/>
-            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="331" Stroke="Black" StrokeThickness="3" Canvas.Top="356" RenderTransformOrigin="0.948,0.611" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave"/>
-            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="236" Stroke="Black" StrokeThickness="3" Canvas.Top="196" RenderTransformOrigin="0.52,0.48" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave"/>
-            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="186" Stroke="Black" StrokeThickness="3" Canvas.Top="196" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave"/>
-            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="285" Stroke="Black" StrokeThickness="3" Canvas.Top="356"  MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom"/>
-            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="576" Stroke="Black" StrokeThickness="3" Canvas.Top="356"  MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom" />
-            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="582" Stroke="Black" StrokeThickness="3" Canvas.Top="196" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave"/>
-            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="582" Stroke="Black" StrokeThickness="3" Canvas.Top="246" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave"/>
-            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="186" Stroke="Black" StrokeThickness="3" Canvas.Top="246" RenderTransformOrigin="1.34,0.62" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave"/>
-            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="336" Stroke="Black" StrokeThickness="3" Canvas.Top="196"  MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom" />
+            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="434" Stroke="Black" StrokeThickness="3" Canvas.Top="406" />
+            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="384" Stroke="Black" StrokeThickness="3" Canvas.Top="406" />
+            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="138" Stroke="Black" StrokeThickness="3" Canvas.Top="406" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationAuxiliaryRoom"/>
+            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="285" Stroke="Black" StrokeThickness="3" Canvas.Top="406" RenderTransformOrigin="0.948,0.611" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationAuxiliaryRoom"/>
+            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="138" Stroke="Black" StrokeThickness="3" Canvas.Top="356" RenderTransformOrigin="0.52,0.48" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationAuxiliaryRoom"/>
+            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="137" Stroke="Black" StrokeThickness="3" Canvas.Top="196" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationAuxiliaryRoom"/>
+            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="236" Stroke="Black" StrokeThickness="3" Canvas.Top="356"  MouseEnter="ExaminationRoom_MouseEnter" MouseLeave="ExaminationRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationExaminationRoom" />
+            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="483" Stroke="Black" StrokeThickness="3" Canvas.Top="356"  MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom" />
+            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="285" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationAuxiliaryRoom"/>
+            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="280" Stroke="Black" StrokeThickness="3" Canvas.Top="196" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationAuxiliaryRoom"/>
+            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="328" Stroke="Black" StrokeThickness="3" Canvas.Top="196"  MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom" />
             <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="88" Stroke="Black" StrokeThickness="3" Canvas.Top="196"  MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom"/>
-            <Rectangle Fill="White" Height="100" Width="100" Canvas.Left="428" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="OperatingRoom_MouseEnter" MouseLeave="OperatingRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationOperatingRoom" />
+            <Rectangle Fill="White" Height="100" Width="100" Canvas.Left="581" Stroke="Black" StrokeThickness="3" Canvas.Top="196" MouseEnter="OperatingRoom_MouseEnter" MouseLeave="OperatingRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationOperatingRoom" />
+            <Line X1="0" Y1="0" X2="0" Y2="100" Stroke="Black" StrokeThickness="6" Canvas.Left="384" Canvas.Top="356"/>
+            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="188" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="ExaminationRoom_MouseEnter" MouseLeave="ExaminationRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationExaminationRoom"/>
+            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="88" Stroke="Black" StrokeThickness="3" Canvas.Top="356"  MouseEnter="ExaminationRoom_MouseEnter" MouseLeave="ExaminationRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationExaminationRoom"/>
         </Canvas>
         <Popup x:Name="PopupPatientRoom"
                    AllowsTransparency="True"
@@ -76,7 +77,7 @@
                    VerticalOffset="10">
 
             <Grid>
-                  <local1:PopupPatientRoom x:Name="PatientRoom" Foreground="#E0FFFF"/>  
+                <local1:PopupPatientRoom x:Name="PatientRoom" Foreground="#E0FFFF"/>
             </Grid>
         </Popup>
         <Popup x:Name="PopupExaminationRoom"
@@ -85,7 +86,7 @@
                    VerticalOffset="10">
 
             <Grid>
-                    <local1:PopupExaminationRoom x:Name="ExaminationRoom" Foreground="#E0FFFF"/> 
+                <local1:PopupExaminationRoom x:Name="ExaminationRoom" Foreground="#E0FFFF"/>
             </Grid>
         </Popup>
         <Popup x:Name="PopupOperatingRoom"
@@ -94,7 +95,7 @@
                    VerticalOffset="10">
 
             <Grid>
-                      <local1:PopupOperatingRoom x:Name="OperatingRoom" Foreground="#E0FFFF"/> 
+                <local1:PopupOperatingRoom x:Name="OperatingRoom" Foreground="#E0FFFF"/>
             </Grid>
         </Popup>
         <Popup x:Name="PopupAuxiliaryRoom"
@@ -103,7 +104,7 @@
                    VerticalOffset="10">
 
             <Grid>
-                <local1:PopupAuxiliaryRoom x:Name="AuxiliaryRoom" Foreground="#E0FFFF"/> 
+                <local1:PopupAuxiliaryRoom x:Name="AuxiliaryRoom" Foreground="#E0FFFF"/>
             </Grid>
         </Popup>
     </Grid>
