--- a/GraphicEditor/View/Building2/Building2GroundFloorPlan.xaml
+++ b/GraphicEditor/View/Building2/Building2GroundFloorPlan.xaml
@@ -13,13 +13,13 @@
             <Label Content="Hospital 2" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Georgia" FontWeight="UltraBold" FontSize="50" Foreground="Black" Canvas.Left="249" Canvas.Top="36"/>
             <Image Source="arrowUp.png" Width="60" Canvas.Left="348" Canvas.Top="113" MouseLeftButtonDown="mouseClickArrowUp"/>
             <Rectangle Fill="White" Stroke="Black" StrokeThickness="3" Height="260" Width="595" Canvas.Left="86"  Canvas.Top="196"/>
-            <Rectangle Fill="White" Height="100" Width="50" Stroke="Black" StrokeThickness="3" Canvas.Left="86" Canvas.Top="196" MouseEnter="ExaminationRoom_MouseEnter" MouseLeave="ExaminationRoom_MouseLeave" />
-            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="184" Stroke="Black" StrokeThickness="3" Canvas.Top="196" MouseEnter="ExaminationRoom_MouseEnter" MouseLeave="ExaminationRoom_MouseLeave" />
-            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="186" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="ExaminationRoom_MouseEnter" MouseLeave="ExaminationRoom_MouseLeave" />
+            <Rectangle Fill="White" Height="100" Width="50" Stroke="Black" StrokeThickness="3" Canvas.Left="86" Canvas.Top="196" MouseEnter="ExaminationRoom_MouseEnter" MouseLeave="ExaminationRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationExaminationRoom" />
+            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="186" Stroke="Black" StrokeThickness="3" Canvas.Top="197" MouseEnter="ExaminationRoom_MouseEnter" MouseLeave="ExaminationRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationExaminationRoom" />
+            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="186" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="ExaminationRoom_MouseEnter" MouseLeave="ExaminationRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationExaminationRoom" />
             <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="481" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom" />
-            <Rectangle Fill="White" Height="100" Width="100" Canvas.Left="382" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="OperatingRoom_MouseEnter" MouseLeave="OperatingRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationOperatingRoom" />
-            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="581" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom" />
-            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="481" Stroke="Black" StrokeThickness="3" Canvas.Top="196" MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom" />
+            <Rectangle Fill="White" Height="100" Width="100" Canvas.Left="531" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="OperatingRoom_MouseEnter" MouseLeave="OperatingRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationOperatingRoom" />
+            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="481" Stroke="Black" StrokeThickness="3" Canvas.Top="197" MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom" />
+            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="631" Stroke="Black" StrokeThickness="3" Canvas.Top="197" MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom" />
             <Line X1="10" Y1="10" X2="10" Y2="30" Stroke="Black" 
                   StrokeThickness="5" StrokeDashCap="Round" StrokeEndLineCap="Round" StrokeStartLineCap="Round" Canvas.Left="392" Canvas.Top="256"/>
             <Line X1="10" Y1="35" X2="5" Y2="30" Stroke="Black" 
@@ -42,7 +42,7 @@
                 </Line.RenderTransform>
             </Line>
             <Line X1="0" Y1="0" X2="0" Y2="100" Stroke="Black" StrokeThickness="6" Canvas.Left="378" Canvas.Top="196"/>
-            <Line X1="0" Y1="0" X2="0" Y2="100" Stroke="Black" StrokeThickness="6" Canvas.Left="481" Canvas.Top="196"/>
+            <Line X1="0" Y1="0" X2="0" Y2="100" Stroke="Black" StrokeThickness="6" Canvas.Left="481" Canvas.Top="197"/>
             <Line X1="0" Y1="0" X2="0" Y2="100" Stroke="Black" StrokeThickness="6" Canvas.Left="380" Canvas.Top="356"/>
             <Line X1="0" Y1="0" X2="0" Y2="-80" Stroke="Black" StrokeThickness="6" Canvas.Left="431" Canvas.Top="296"/>
             <Line X1="100" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Left="381" Canvas.Top="295"/>
@@ -54,13 +54,16 @@
             <Line X1="100" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Left="381" Canvas.Top="235"/>
             <Line X1="100" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Left="381" Canvas.Top="225"/>
             <Line X1="100" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Left="381" Canvas.Top="215"/>
-            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="236" Stroke="Black" StrokeThickness="3" Canvas.Top="406" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave"/>
-            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="236" Stroke="Black" StrokeThickness="3" Canvas.Top="356" RenderTransformOrigin="0.948,0.611" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave"/>
-            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="531" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom" />
-            <Rectangle Fill="White" Height="100" Width="100" Canvas.Left="86" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="OperatingRoom_MouseEnter" MouseLeave="OperatingRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationOperatingRoom" />
-            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="135" Stroke="Black" StrokeThickness="3" Canvas.Top="197" MouseEnter="ExaminationRoom_MouseEnter" MouseLeave="ExaminationRoom_MouseLeave" />
-            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="232" Stroke="Black" StrokeThickness="3" Canvas.Top="197" RenderTransformOrigin="0.948,0.611" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave"/>
-            <Rectangle Fill="White" Height="100" Width="100" Canvas.Left="531" Stroke="Black" StrokeThickness="3" Canvas.Top="195" MouseEnter="OperatingRoom_MouseEnter" MouseLeave="OperatingRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationOperatingRoom" />
+            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="383" Stroke="Black" StrokeThickness="3" Canvas.Top="406"/>
+            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="431" Stroke="Black" StrokeThickness="3" Canvas.Top="406" RenderTransformOrigin="0.948,0.611" />
+            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="631" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="PatientRoom_MouseEnter" MouseLeave="PatientRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationPatientRoom" />
+            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="86" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="ExaminationRoom_MouseEnter" MouseLeave="ExaminationRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationExaminationRoom" />
+            <Rectangle Fill="White" Height="100" Width="100" Canvas.Left="531" Stroke="Black" StrokeThickness="3" Canvas.Top="197" MouseEnter="OperatingRoom_MouseEnter" MouseLeave="OperatingRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationOperatingRoom" />
+            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="236" Stroke="Black" StrokeThickness="3" Canvas.Top="197" MouseEnter="ExaminationRoom_MouseEnter" MouseLeave="ExaminationRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationExaminationRoom" />
+            <Rectangle Fill="White" Height="100" Width="50" Canvas.Left="236" Stroke="Black" StrokeThickness="3" Canvas.Top="356" MouseEnter="ExaminationRoom_MouseEnter" MouseLeave="ExaminationRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationExaminationRoom" />
+            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="136" Stroke="Black" StrokeThickness="3" Canvas.Top="406" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationAuxiliaryRoom"/>
+            <Rectangle Fill="White" Height="50" Width="50" Canvas.Left="136" Stroke="Black" StrokeThickness="3" Canvas.Top="197" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave" MouseLeftButtonDown="AdditionalInformationAuxiliaryRoom"/>
+
         </Canvas>
         <Popup x:Name="PopupPatientRoom"
                    AllowsTransparency="True"
@@ -98,9 +101,5 @@
                 <local:PopupAuxiliaryRoom x:Name="AuxiliaryRoom" Foreground="#E0FFFF"/>
             </Grid>
         </Popup>
-        <Rectangle Fill="White" Stroke="Black" StrokeThickness="3" Margin="232,246,484,356" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave"/>
-        <Rectangle Fill="White" Stroke="Black" StrokeThickness="3" RenderTransformOrigin="0.948,0.611" Margin="628,196,88,406" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave"/>
-        <Rectangle Fill="White" Stroke="Black" StrokeThickness="3" RenderTransformOrigin="0.948,0.611" Margin="628,406,88,196" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave"/>
-        <Rectangle Fill="White" Stroke="Black" StrokeThickness="3" RenderTransformOrigin="0.948,0.611" Margin="628,246,88,356" MouseEnter="AuxiliaryRoom_MouseEnter" MouseLeave="AuxiliaryRoom_MouseLeave"/>
     </Grid>
 </Page>
