--- a/GraphicEditor/View/PopupPatientRoom.xaml
+++ b/GraphicEditor/View/PopupPatientRoom.xaml
@@ -38,17 +38,17 @@
                    Panel.ZIndex="1"
                    HorizontalAlignment="Center"
                    VerticalAlignment="Center" Height="65" Width="175">
-            <Run BaselineAlignment="Bottom" Text="Oznaka sobe:" Foreground="White" FontWeight="DemiBold"/>
+            <Run BaselineAlignment="Bottom" Text="Patient room label:" Foreground="White" FontWeight="DemiBold"/>
             <InlineUIContainer BaselineAlignment="Bottom">
-                <TextBox Height="18" TextWrapping="Wrap" Text="S2-G2" Width="85" TextAlignment="Left" FontSize="11" FontWeight="DemiBold"/>
+                <TextBox Height="18" TextWrapping="Wrap" Text="S2-G2" Width="48" TextAlignment="Center" FontSize="11" FontWeight="DemiBold"/>
             </InlineUIContainer>
-            <Run BaselineAlignment="Bottom" Text="&#x0a;Broj zauzetih kreveta:" Foreground="White" FontWeight="SemiBold"/>
+            <Run BaselineAlignment="Bottom" Text="&#x0a;Occupied beds:" Foreground="White" FontWeight="SemiBold"/>
             <InlineUIContainer BaselineAlignment="Center">
-                <TextBox Height="21" TextWrapping="Wrap" Text="3" Width="33" TextAlignment="Center" FontSize="13" FontWeight="Heavy" Foreground="White" Background="#3A6180" BorderBrush="#3A6180"/>
+                <TextBox Height="21" TextWrapping="Wrap" Text="3" Width="26" TextAlignment="Left" FontSize="13" FontWeight="Heavy" Foreground="White" Background="#3A6180" BorderBrush="#3A6180"/>
             </InlineUIContainer>
-            <Run BaselineAlignment="Bottom" Text="&#x0a;Broj slobodnih kreveta:" Foreground="White" FontWeight="Medium"/>
+            <Run BaselineAlignment="Bottom" Text="&#x0a;Available beds:" Foreground="White" FontWeight="Medium"/>
             <InlineUIContainer BaselineAlignment="Center">
-                <TextBox Height="21" TextWrapping="Wrap" Text="5" Width="22" TextAlignment="Left" FontSize="13" FontWeight="Heavy" Foreground="White" Background="#3A6180" BorderBrush="#3A6180"/>
+                <TextBox Height="21" TextWrapping="Wrap" Text="5" Width="28" TextAlignment="Left" FontSize="13" FontWeight="Heavy" Foreground="White" Background="#3A6180" BorderBrush="#3A6180"/>
             </InlineUIContainer>
         </TextBlock>
     </Grid>
