--- a/GraphicEditor/View/Legend.xaml
+++ b/GraphicEditor/View/Legend.xaml
@@ -29,10 +29,10 @@
                 <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
-            <Rectangle Fill="Gold" Stroke="Black" StrokeThickness="2"  Margin="5" Grid.Row="3"></Rectangle>
-            <Rectangle Fill="LimeGreen" Stroke="Black" StrokeThickness="2" Margin="5" Grid.Row="2" Grid.RowSpan="1"/>
-            <Rectangle Fill="RoyalBlue" Stroke="Black" StrokeThickness="2" Grid.ColumnSpan="1" Grid.Row="1" Margin="5"/>
-            <Rectangle Fill="Tomato" Stroke="Black" StrokeThickness="2" Grid.ColumnSpan="1" Margin="5,1,5,10"/>
+            <Rectangle Fill="#dca0d3" Stroke="Black" StrokeThickness="2"  Margin="5" Grid.Row="3"></Rectangle>
+            <Rectangle Fill="#77c588" Stroke="Black" StrokeThickness="2" Margin="5" Grid.Row="2" Grid.RowSpan="1"/>
+            <Rectangle Fill="#208e38" Stroke="Black" StrokeThickness="2" Grid.ColumnSpan="1" Grid.Row="1" Margin="5"/>
+            <Rectangle Fill="#9da49f" Stroke="Black" StrokeThickness="2" Grid.ColumnSpan="1" Margin="5,1,5,10"/>
             <Label Grid.ColumnSpan="3" Margin="3,1,1,3" Grid.Row="3" RenderTransformOrigin="0.5,0.5" Foreground="White" FontWeight="SemiBold" Grid.Column="1">
                 <Label.RenderTransform>
                     <TransformGroup>
