--- a/WebApplicationFrontend/src/app/registration/patient-registration/patient-registration.component.css
+++ b/WebApplicationFrontend/src/app/registration/patient-registration/patient-registration.component.css
@@ -17,7 +17,7 @@
     margin-bottom: 0px;
 }
 
-.personalInfoSection {
+.sections {
     padding-top: 10px;
 }
 
@@ -25,6 +25,12 @@
     padding-top: 15px;
 }
 
+.heading-row {
+    padding-top:15px;
+}
+.mat-divider {
+    border-top-color: #3F51B5;
+  }
 :focus {
     outline:none;
  }
