:iphone: Made the basic look of the medical record

--- a/WebApplicationFrontend/src/app/medical-record/medical-record.component.html
+++ b/WebApplicationFrontend/src/app/medical-record/medical-record.component.html
@@ -1,1 +1,22 @@
-<p>medical-record works!</p>
+<div class = "container">
+    <mat-tab-group>
+        <mat-tab label = "Patient Info">
+            Content
+        </mat-tab>
+        <mat-tab label = "Allergies">
+            Content
+        </mat-tab>
+        <mat-tab label = "Vaccines">
+            Content
+        </mat-tab>
+        <mat-tab label = "Illness History">
+            Content
+        </mat-tab>
+        <mat-tab label = "Family Illness History">
+            Content
+        </mat-tab>
+        <mat-tab label = "Therapies"> 
+            Content
+        </mat-tab>
+    </mat-tab-group> 
+</div>
